// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component Should render the Section component 1`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <div
      class="o-shell c-shell-test"
    >
      <header
        class="c-section__header"
      >
        <div />
        <h2>
          Test title
        </h2>
        <h3>
          Test subtitle
        </h3>
      </header>
      <h1>
        This is a test title
      </h1>
      <div
        class="c-section__actions"
      >
        <button
          class="c-btn"
          type="button"
        >
          Get in touch
        </button>
        <ul
          class="c-section__actions-list"
        >
          <li>
            <button
              class="c-btn c-section__actions-close"
              type="button"
            >
              Close
            </button>
          </li>
          <li>
            <button
              class="c-btn"
              type="button"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-email"
                />
              </svg>
              <span>
                Contact me
              </span>
              <strong>
                directly
              </strong>
            </button>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://app.usebraintrust.com/talent/782/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-braintrust"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Braintrust
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://www.toptal.com/resume/atanas-atanasov"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-toptal"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Toptal
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
        </ul>
        <br
          class="visible-xs-block"
        />
        <div />
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 2`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <div
      class="o-shell c-shell-test"
    >
      <header
        class="c-section__header"
      >
        <div />
        <h2>
          Test title
        </h2>
        <h3>
          Test subtitle
        </h3>
      </header>
      <h1>
        This is a test title
      </h1>
      <div
        class="c-section__actions"
      >
        <button
          class="c-btn"
          type="button"
        >
          Get in touch
        </button>
        <ul
          class="c-section__actions-list"
        >
          <li>
            <button
              class="c-btn c-section__actions-close"
              type="button"
            >
              Close
            </button>
          </li>
          <li>
            <button
              class="c-btn"
              type="button"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-email"
                />
              </svg>
              <span>
                Contact me
              </span>
              <strong>
                directly
              </strong>
            </button>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://app.usebraintrust.com/talent/782/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-braintrust"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Braintrust
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://www.toptal.com/resume/atanas-atanasov"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-toptal"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Toptal
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
        </ul>
        <br
          class="visible-xs-block"
        />
        <div />
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 3`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <div
      class="o-shell c-shell-test"
    >
      <header
        class="c-section__header"
      >
        <div />
        <h2>
          Test title
        </h2>
        <h3>
          Test subtitle
        </h3>
      </header>
      <h1>
        This is a test title
      </h1>
      <div
        class="c-section__actions"
      >
        <button
          class="c-btn"
          type="button"
        >
          Get in touch
        </button>
        <ul
          class="c-section__actions-list"
        >
          <li>
            <button
              class="c-btn c-section__actions-close"
              type="button"
            >
              Close
            </button>
          </li>
          <li>
            <button
              class="c-btn"
              type="button"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-email"
                />
              </svg>
              <span>
                Contact me
              </span>
              <strong>
                directly
              </strong>
            </button>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://app.usebraintrust.com/talent/782/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-braintrust"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Braintrust
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://www.toptal.com/resume/atanas-atanasov"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-toptal"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Toptal
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
        </ul>
        <br
          class="visible-xs-block"
        />
        <div />
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 4`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <div
      class="o-shell c-shell-test"
    >
      <header
        class="c-section__header"
      >
        <div />
        <h2>
          Test title
        </h2>
        <h3>
          Test subtitle
        </h3>
      </header>
      <h1>
        This is a test title
      </h1>
      <div
        class="c-section__actions"
      >
        <button
          class="c-btn"
          type="button"
        >
          Get in touch
        </button>
        <ul
          class="c-section__actions-list"
        >
          <li>
            <button
              class="c-btn c-section__actions-close"
              type="button"
            >
              Close
            </button>
          </li>
          <li>
            <button
              class="c-btn"
              type="button"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-email"
                />
              </svg>
              <span>
                Contact me
              </span>
              <strong>
                directly
              </strong>
            </button>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://app.usebraintrust.com/talent/782/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-braintrust"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Braintrust
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://www.toptal.com/resume/atanas-atanasov"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-toptal"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Toptal
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
        </ul>
        <br
          class="visible-xs-block"
        />
        <div />
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 5`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <div
      class="o-shell c-shell-test"
    >
      <header
        class="c-section__header"
      >
        <div />
        <h2>
          Test title
        </h2>
        <h3>
          Test subtitle
        </h3>
      </header>
      <h1>
        This is a test title
      </h1>
      <div
        class="c-section__actions"
      >
        <button
          class="c-btn"
          type="button"
        >
          Get in touch
        </button>
        <ul
          class="c-section__actions-list"
        >
          <li>
            <button
              class="c-btn c-section__actions-close"
              type="button"
            >
              Close
            </button>
          </li>
          <li>
            <button
              class="c-btn"
              type="button"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-email"
                />
              </svg>
              <span>
                Contact me
              </span>
              <strong>
                directly
              </strong>
            </button>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://app.usebraintrust.com/talent/782/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-braintrust"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Braintrust
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://www.toptal.com/resume/atanas-atanasov"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-toptal"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Toptal
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
        </ul>
        <br
          class="visible-xs-block"
        />
        <div />
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 6`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <div
      class="o-shell c-shell-test"
    >
      <header
        class="c-section__header"
      >
        <div />
        <h2>
          Test title
        </h2>
        <h3>
          Test subtitle
        </h3>
      </header>
      <h1>
        This is a test title
      </h1>
      <div
        class="c-section__actions"
      >
        <button
          class="c-btn"
          type="button"
        >
          Get in touch
        </button>
        <ul
          class="c-section__actions-list"
        >
          <li>
            <button
              class="c-btn c-section__actions-close"
              type="button"
            >
              Close
            </button>
          </li>
          <li>
            <button
              class="c-btn"
              type="button"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-email"
                />
              </svg>
              <span>
                Contact me
              </span>
              <strong>
                directly
              </strong>
            </button>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://app.usebraintrust.com/talent/782/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-braintrust"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Braintrust
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://www.toptal.com/resume/atanas-atanasov"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-toptal"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Toptal
              </strong>
              <svg
                class="c-svg-external-link"
              >
                <use
                  xlink:href="#svg-external-link"
                />
              </svg>
            </a>
          </li>
        </ul>
        <br
          class="visible-xs-block"
        />
        <div />
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 7`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <div
      class="o-shell c-shell-test"
    >
      <header
        class="c-section__header"
      >
        <div />
        <h3>
          Test subtitle
        </h3>
      </header>
      <h1>
        This is a test title
      </h1>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 8`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <h1>
      This is a test title
    </h1>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 9`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <h1>
      This is a test title
    </h1>
    <div
      class="c-section__actions"
    >
      <button
        class="c-btn"
        type="button"
      >
        Get in touch
      </button>
      <ul
        class="c-section__actions-list"
      >
        <li>
          <button
            class="c-btn c-section__actions-close"
            type="button"
          >
            Close
          </button>
        </li>
        <li>
          <button
            class="c-btn"
            type="button"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-email"
              />
            </svg>
            <span>
              Contact me
            </span>
            <strong>
              directly
            </strong>
          </button>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://app.usebraintrust.com/talent/782/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-braintrust"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Braintrust
            </strong>
            <svg
              class="c-svg-external-link"
            >
              <use
                xlink:href="#svg-external-link"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://www.toptal.com/resume/atanas-atanasov"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-toptal"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Toptal
            </strong>
            <svg
              class="c-svg-external-link"
            >
              <use
                xlink:href="#svg-external-link"
              />
            </svg>
          </a>
        </li>
      </ul>
      <br
        class="visible-xs-block"
      />
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 10`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <h1>
      This is a test title
    </h1>
    <div
      class="c-section__actions"
    >
      <button
        class="c-btn"
        type="button"
      >
        Get in touch
      </button>
      <ul
        class="c-section__actions-list"
      >
        <li>
          <button
            class="c-btn c-section__actions-close"
            type="button"
          >
            Close
          </button>
        </li>
        <li>
          <button
            class="c-btn"
            type="button"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-email"
              />
            </svg>
            <span>
              Contact me
            </span>
            <strong>
              directly
            </strong>
          </button>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://app.usebraintrust.com/talent/782/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-braintrust"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Braintrust
            </strong>
            <svg
              class="c-svg-external-link"
            >
              <use
                xlink:href="#svg-external-link"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://www.toptal.com/resume/atanas-atanasov"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-toptal"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Toptal
            </strong>
            <svg
              class="c-svg-external-link"
            >
              <use
                xlink:href="#svg-external-link"
              />
            </svg>
          </a>
        </li>
      </ul>
      <br
        class="visible-xs-block"
      />
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 11`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <h1>
      This is a test title
    </h1>
    <div
      class="c-section__actions"
    >
      <button
        class="c-btn"
        type="button"
      >
        Get in touch
      </button>
      <ul
        class="c-section__actions-list"
      >
        <li>
          <button
            class="c-btn c-section__actions-close"
            type="button"
          >
            Close
          </button>
        </li>
        <li>
          <button
            class="c-btn"
            type="button"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-email"
              />
            </svg>
            <span>
              Contact me
            </span>
            <strong>
              directly
            </strong>
          </button>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://app.usebraintrust.com/talent/782/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-braintrust"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Braintrust
            </strong>
            <svg
              class="c-svg-external-link"
            >
              <use
                xlink:href="#svg-external-link"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://www.toptal.com/resume/atanas-atanasov"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-toptal"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Toptal
            </strong>
            <svg
              class="c-svg-external-link"
            >
              <use
                xlink:href="#svg-external-link"
              />
            </svg>
          </a>
        </li>
      </ul>
      <br
        class="visible-xs-block"
      />
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 12`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <h1>
      This is a test title
    </h1>
    <div
      class="c-section__actions"
    >
      <button
        class="c-btn"
        type="button"
      >
        Get in touch
      </button>
      <ul
        class="c-section__actions-list"
      >
        <li>
          <button
            class="c-btn c-section__actions-close"
            type="button"
          >
            Close
          </button>
        </li>
        <li>
          <button
            class="c-btn"
            type="button"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-email"
              />
            </svg>
            <span>
              Contact me
            </span>
            <strong>
              directly
            </strong>
          </button>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://app.usebraintrust.com/talent/782/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-braintrust"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Braintrust
            </strong>
            <svg
              class="c-svg-external-link"
            >
              <use
                xlink:href="#svg-external-link"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://www.toptal.com/resume/atanas-atanasov"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-toptal"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Toptal
            </strong>
            <svg
              class="c-svg-external-link"
            >
              <use
                xlink:href="#svg-external-link"
              />
            </svg>
          </a>
        </li>
      </ul>
      <br
        class="visible-xs-block"
      />
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 13`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <h1>
      This is a test title
    </h1>
    <div
      class="c-section__actions"
    >
      <button
        class="c-btn"
        type="button"
      >
        Get in touch
      </button>
      <ul
        class="c-section__actions-list"
      >
        <li>
          <button
            class="c-btn c-section__actions-close"
            type="button"
          >
            Close
          </button>
        </li>
        <li>
          <button
            class="c-btn"
            type="button"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-email"
              />
            </svg>
            <span>
              Contact me
            </span>
            <strong>
              directly
            </strong>
          </button>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://app.usebraintrust.com/talent/782/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-braintrust"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Braintrust
            </strong>
            <svg
              class="c-svg-external-link"
            >
              <use
                xlink:href="#svg-external-link"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://www.toptal.com/resume/atanas-atanasov"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-toptal"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Toptal
            </strong>
            <svg
              class="c-svg-external-link"
            >
              <use
                xlink:href="#svg-external-link"
              />
            </svg>
          </a>
        </li>
      </ul>
      <br
        class="visible-xs-block"
      />
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 14`] = `
<DocumentFragment>
  <section
    class="c-section c-section--test c-section-test"
    id="test"
    style="color: rebeccapurple;"
  >
    <h1>
      This is a test title
    </h1>
    <div
      class="c-section__actions"
    >
      <button
        class="c-btn"
        type="button"
      >
        Get in touch
      </button>
      <ul
        class="c-section__actions-list"
      >
        <li>
          <button
            class="c-btn c-section__actions-close"
            type="button"
          >
            Close
          </button>
        </li>
        <li>
          <button
            class="c-btn"
            type="button"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-email"
              />
            </svg>
            <span>
              Contact me
            </span>
            <strong>
              directly
            </strong>
          </button>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://app.usebraintrust.com/talent/782/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-braintrust"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Braintrust
            </strong>
            <svg
              class="c-svg-external-link"
            >
              <use
                xlink:href="#svg-external-link"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://www.toptal.com/resume/atanas-atanasov"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                xlink:href="#svg-toptal"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Toptal
            </strong>
            <svg
              class="c-svg-external-link"
            >
              <use
                xlink:href="#svg-external-link"
              />
            </svg>
          </a>
        </li>
      </ul>
      <br
        class="visible-xs-block"
      />
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 15`] = `
<DocumentFragment>
  <nav
    class="c-section__nav"
  >
    <ul>
      <li
        class="current"
      >
        <button
          aria-label="Switch to Video 1 Title"
          class="c-btn"
          type="button"
        >
          Video 1 Title
        </button>
      </li>
      <li>
        <button
          aria-label="Switch to Video 2 Title"
          class="c-btn"
          type="button"
        >
          Video 2 Title
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 16`] = `
<DocumentFragment>
  <nav
    class="c-section__nav"
  >
    <ul>
      <li
        class="current"
      >
        <button
          aria-label="Switch to Video 1 Title"
          class="c-btn"
          type="button"
        >
          Video 1 Title
        </button>
      </li>
      <li>
        <button
          aria-label="Switch to Video 2 Title"
          class="c-btn"
          type="button"
        >
          Video 2 Title
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 17`] = `
<DocumentFragment>
  <nav
    class="c-section__nav"
  >
    <ul>
      <li
        class="current"
      >
        <button
          aria-label="Switch to Video 1 Title"
          class="c-btn"
          type="button"
        >
          Video 1 Title
        </button>
      </li>
      <li>
        <button
          aria-label="Switch to Video 2 Title"
          class="c-btn"
          type="button"
        >
          Video 2 Title
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 18`] = `
<DocumentFragment>
  <div
    class="c-section__grid o-grid"
  >
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/github"
        style="background-image: url(/images/temp/github.jpg);"
      >
        <strong>
          Github
        </strong>
      </a>
      <div
        class="c-loading"
      >
        <div
          class="c-loader"
        />
      </div>
    </div>
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/gitlab"
        style="background-image: url(/images/temp/gitlab.jpg);"
      >
        <strong>
          Gitlab
        </strong>
      </a>
      <div
        class="c-loading"
      >
        <div
          class="c-loader"
        />
      </div>
    </div>
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/npm"
        style="background-image: url(/images/temp/npm.jpg);"
      >
        <strong>
          NPM
        </strong>
      </a>
      <div
        class="c-loading"
      >
        <div
          class="c-loader"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 19`] = `
<DocumentFragment>
  <div
    class="c-section__grid o-grid"
  >
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/github"
        style="background-image: url(/images/temp/github.jpg);"
      >
        <strong>
          Github
        </strong>
      </a>
      <div
        class="c-loading"
      >
        <div
          class="c-loader"
        />
      </div>
    </div>
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/gitlab"
        style="background-image: url(/images/temp/gitlab.jpg);"
      >
        <strong>
          Gitlab
        </strong>
      </a>
      <div
        class="c-loading"
      >
        <div
          class="c-loader"
        />
      </div>
    </div>
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/npm"
        style="background-image: url(/images/temp/npm.jpg);"
      >
        <strong>
          NPM
        </strong>
      </a>
      <div
        class="c-loading"
      >
        <div
          class="c-loader"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Section component Should render the Section component 20`] = `
<DocumentFragment>
  <div
    class="c-section__grid o-grid"
  >
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/github"
        rel="noopener noreferrer"
        style="background-image: url(/images/temp/github.jpg);"
        target="_blank"
      >
        <strong>
          Github
        </strong>
        <svg
          class="c-svg-external-link"
        >
          <use
            xlink:href="#svg-external-link"
          />
        </svg>
      </a>
      <div
        class="c-loading"
      >
        <div
          class="c-loader"
        />
      </div>
    </div>
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/gitlab"
        rel="noopener noreferrer"
        style="background-image: url(/images/temp/gitlab.jpg);"
        target="_blank"
      >
        <strong>
          Gitlab
        </strong>
        <svg
          class="c-svg-external-link"
        >
          <use
            xlink:href="#svg-external-link"
          />
        </svg>
      </a>
      <div
        class="c-loading"
      >
        <div
          class="c-loader"
        />
      </div>
    </div>
    <div
      class="o-grid__item xs-12 sm-6 md-4 lg-4 xl-4"
    >
      <a
        class="c-article-link fullsize-background"
        href="/stats/npm"
        rel="noopener noreferrer"
        style="background-image: url(/images/temp/npm.jpg);"
        target="_blank"
      >
        <strong>
          NPM
        </strong>
        <svg
          class="c-svg-external-link"
        >
          <use
            xlink:href="#svg-external-link"
          />
        </svg>
      </a>
      <div
        class="c-loading"
      >
        <div
          class="c-loader"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Section component Should unmount the Section component 1`] = `<DocumentFragment />`;

exports[`Section component Should unmount the Section component 2`] = `<DocumentFragment />`;

exports[`Section component Should unmount the Section component 3`] = `<DocumentFragment />`;

exports[`Section component Should unmount the Section component 4`] = `<DocumentFragment />`;

exports[`Section component Should unmount the Section component 5`] = `<DocumentFragment />`;

exports[`Section component Should unmount the Section component 6`] = `<DocumentFragment />`;

exports[`Section component Should unmount the Section component 7`] = `<DocumentFragment />`;

exports[`Section component Should unmount the Section component 8`] = `<DocumentFragment />`;
